# Black-Box

./: Cargo.toml  LICENSE.md  README.md
black-box-engine/: Cargo.toml
black-box-engine/src/wgpu/: mod.rs  pass.rs  pipeline.rs  shader.rs  texture.rs
core-graphics/: Cargo.toml
core-graphics/examples/: instance.rs
core-graphics/src/: device.rs  instance.rs  lib.rs  surface.rs
examples/simple-window/: main.rs
examples/voxel-rendering/: camera.rs  main.rs  voxel_octree.rs
examples/voxel-rendering/shaders/: test.wgsl
src/engine/: mod.rs  renderer.rs  window.rs
src/engine/renderers/: wgpu_renderer.rs
src/sample/: main.rs
src/shaders/: fsq.wgsl  test.wgsl
