# [package]
# name    = "voxel"
# version = "0.1.0"
# edition = "2021"

# exclude = ["target/**/*"]

# [[example]]
# name = "voxel-rendering"

# [[example]]
# name = "simple-window"

# [lib]
# name = "voxel_engine"
# path = "src/lib.rs"

# [dependencies]
# winit               = "0.27.5"
# raw-window-handle   = "0.5.0"
# wgpu                = "0.14.0"
# pollster            = "0.2.4"
# bytemuck            = { version = "1.12.2", features = ["derive"] }

# [dev-dependencies]
# nalgebra = { version = "0.31.3", features = ["bytemuck"] }
# nalgebra-glm = { version = "0.17.0" }

[workspace]
resolver = "2"
members = [
    "black-box-engine",
    "core-graphics",
]